翻译 做全优学生的危险

--- a/Essays/做全优学生的危险.md
+++ b/Essays/做全优学生的危险.md
@@ -1,171 +1,193 @@
+#! https://zhuanlan.zhihu.com/p/369391813
+![Image](https://pic4.zhimg.com/80/v2-39c08b3d4c095dfb8f197f8591547fb0.jpg)
 # 做全优学生的危险
+
+原文：https://supermemo.guru/wiki/Dangers_of_being_a_Straight_A_student
 
 ## 在学校取得成功的代价
 
-在学校里得了全A的孩子，往往不能把成功转化为伟大。
+在学校里得了全优的孩子，往往不能把成功转化为伟大。
 
-一般人认为，成为 "全A学生 "是一件好事。然而，在很多情况下，在学校的良好表现也应该是一个警示信号。做一个完美的学生，有两个方面会带来危险。(1)机会成本；(2)心理成本。两者都可能是戏剧性的，都可能产生持续一生的影响。
+一般人认为，成为"全优学生"是一件好事。然而，在很多情况下，在学校的良好表现也应该是一个警示信号。做一个完美的学生，有两个方面会带来危险。(1)机会成本；(2)心理成本。两者都可能是戏剧性的，都可能产生持续一生的影响。
 
 ### 机会成本
 
-要想成为一个完美的学生，通常需要付出很多努力。学习有很多优点。能带来好成绩的学习有很多优点。优质的学习是很珍贵的。然而，对于很多优秀的学生来说，大量的学习意味着很少有时间去自由思考和自己的激情。这些时间的限制有四大代价。对：激情、创造力、自我激励和自律有负面影响。机会成本影响的是整个学习人群，然而，正是那些完美的学生，往往需要付出额外的努力来通过一个非理性的基准，或者取悦一个非理性的老师。在这其中，在相同的学习能力水平下，"完美 "学生的机会成本通常会大于 "差 "学生所承担的成本。
+要想成为一个完美的学生，通常需要付出很多努力。学习有很多优点。能带来好成绩的学习有很多优点。优质的学习是很珍贵的。然而，对于很多优秀的学生来说，大量的学习意味着很少有时间留给自由思考和自己的激情。这些时间的限制有四大代价。对**激情**、**创造力**、**自我激励**和**自律**有负面影响。机会成本影响的是整个学习人群，然而，正是那些完美的学生，往往需要付出额外的努力来通过一个非理性的基准，或者取悦一个非理性的老师。在这其中，在相同的学习能力水平下，"完美"学生的机会成本通常会大于"糟糕"学生所承担的成本。
 
-激情：改变人生的激情需要时间来发芽，往往需要大量的修整和自己的时间来成熟。直升A的学生很少有时间去培养自己的激情。在理想的情况下，他们可能会把激情与学习和好成绩结合在一起（请看我自己的案例，我在22年的教育结束时，有一段时间能做到这一点）。缺乏激情会影响学习和创造力。缺乏激情会延缓发展，对最终的教育结果有巨大的长远影响。如果你的孩子成绩很好，但对某件事情没有激情，你应该考虑和他聊一聊（见：童年的激情）。
+**激情**：改变人生的激情需要时间来发芽，往往需要大量的修整和自己的时间来成熟。全优学生很少有时间去培养自己的激情。在理想的情况下，他们可能会把激情与学习和好成绩结合在一起（请看我自己的案例，我在 [22 年的教育](https://supermemo.guru/wiki/Dangers_of_being_a_Straight_A_student#SuperMemo_streak_.281987-1990.29)结束时，有一段时间能做到这一点）。**缺乏激情会影响学习和创造力。缺乏激情会延缓发展，对最终的教育结果有巨大的长远影响。** 如果你的孩子成绩很好，但对某件事情没有激情，你应该考虑和他聊一聊（见：[童年的激情](https://supermemo.guru/wiki/Childhood_passions)）。
 
-创造性：在创造性的追求中，想法会萌发新的知识分支，有新的兴趣种子。这个过程对扩大知识树的表面至关重要（见：知识结晶）。创造性需要激情、知识和自由探索，这对时间的要求很高。创造力需要适当的心态（见：自然创造力循环）。学校教育阻断了一天中最佳的创意时段，偷走了追求创意的时间。完美的学生，平均来说，创意飞扬的时间更少。这对发展有整体的阻碍作用。自然，可以把优秀的学习与大量的创造结合起来。遗憾的是，这并不是一般直系A学生的操作方式。
+**创造力**：在创造力的追求中，想法会萌发新的知识分支，有新的兴趣种子。这个过程对扩大知识树的表面至关重要（见：[知识结晶](https://supermemo.guru/wiki/Knowledge_crystallization)）。创造力需要激情、知识和自由探索，这对时间的要求很高。创造力需要适当的心态（见：[自然创造力循环](https://supermemo.guru/wiki/Natural_creativity_cycle)）。**学校教育阻断了一天中最佳的创意时段，偷走了追求创意的时间。** 完美的学生，平均来说，创意飞扬的时间更少。这对发展有整体的阻碍作用。自然，可以把优秀的学习与大量的创造结合起来。遗憾的是，这并不是一般全优学生的做法。
 
-自我激励：伟大的人都有伟大的目标。那些在短期奖励或即时惩罚的鞭子下经营生活的人，永远不会活出自己的真正潜力。那些专注于快乐生活的人，可能会遇到享乐主义悖论。相反，那些设定了崇高目标的人，往往活得更有成就感。他们的工作效率更高，更快乐，也更健康。学校教育让孩子们有条件服从短期的奖惩。当成绩成为目标时，长期的学习目标就会被模糊化。当与他人的竞争成为主要动力时，它多半会奖励赢家。为成绩而活的学生，没有制定有意义目标的习惯。这种习惯是可以训练的，应该从小培养。自我激励是美好人生的最佳推进器。
+**自我激励**：伟大的人都有[伟大的目标](https://supermemo.guru/wiki/Setting_goals_can_change_your_life)。那些在短期奖励或即时惩罚的鞭子下经营生活的人，永远不会活出自己的真正潜力。那些专注于快乐生活的人，可能会遇到享乐主义悖论。相反，那些设定了崇高目标的人，往往活得更有成就感。他们的工作效率更高，更快乐，也更健康。学校教育让孩子们习惯服从[短期的奖惩](https://supermemo.guru/wiki/Alfie_Kohn:_Praise_is_a_short-term_motivator)。当成绩成为目标时，长期的学习目标就会被模糊化。当与他人的竞争成为主要动力时，它多半会奖励赢家。为成绩而活的学生，没有制定有意义目标的习惯。这种习惯是可以训练的，应该从小培养。**自我激励是美好人生的最佳推进器。**
 
-自律性：人类的大脑在现代社会中很容易迷失在混乱的信号中。它背负着数百万年来针对不同生存标准的进化。大脑被大量的本能、情绪、认知偏差、个性特征、防御机制、弱点、分心、先天需求等所累。自律的艺术就是利用脑力，而不会对健康造成负面的影响（见：健康自律的公式）。自律是可以训练的。自律最好的办法是通过一套微规则来规范自己的行为。例如，本书提出的一条规则是：如果不享受过程，就永远不要学习。那些在考试和成绩的鞭策下奔波的学生，将自己的大脑推向了违背大脑卫生规则的行动。同时，他们也从来没有养成自己的规则和习惯，增强自律性。完美的学生往往会有原则性的生活：不考试，不威胁，不努力。自律性不强，会影响学生的一生。他们可能会在严格的企业环境中茁壮成长，但他们可能会在创造性的专业，如科学领域中效率较低。他们也不会成为优秀的企业家。
+**自律**：人类的大脑在现代社会中很容易迷失在混乱的信号中。它背负着数百万年来针对不同生存标准的进化。大脑被大量的本能、情绪、认知偏差、个性特征、防御机制、弱点、分心、先天需求等所累。自律的艺术就是利用脑力，而不会对健康造成负面的影响（见：[健康自律的公式](https://supermemo.guru/wiki/Formula_for_healthy_self-discipline)）。自律是可以训练的。自律最好的办法是通过一套微规则来规范自己的行为。例如，本书提出的一条规则是：如果不享受过程，就永远不要学习。那些在考试和成绩的鞭策下奔波的学生，将自己的大脑推向了违背大脑卫生规则的行动。同时，他们也从来没有养成自己的规则和习惯，增强自律性。完美的学生往往会有原则性的生活：不考试，不威胁，不努力。自律性不强，会影响学生的一生。他们可能会在严格的企业环境中茁壮成长，但他们可能会在创造力的专业，如科学领域中效率较低。他们也不会成为优秀的企业家。
 
 ### 心理成本
-做一个全A学生的心理成本会影响到学生本人，或者班上其他孩子。只要这个 "完美 "的学生一直处于领先地位，他可能会带着一种胜利者的感觉茁壮成长。然而，任何影响他地位的变数的变化，都会使他在队伍中的地位直线下降。这对自尊心和自信心会产生毁灭性的影响（见下面的个人故事）。在短短的几个月内，一个在奖励和比赛中的明星获奖者可能会变成一个拒绝学校和抑郁症的案例。在以后的生活中，优秀的学生可能会将患躁郁症的风险提高三倍。
 
-在一个有2-3名优胜者的班级里，其余的孩子可能会感到不足。我之所以能在22年的学校教育中存活下来，是因为我不在乎。我喜欢赢，但还不至于放弃我的课外爱好。试图雇佣领导者来刺激失败者行动的老师可能会使这种感觉不足的情况变得更糟。我在做家教时也犯过这个错误。
+做一个全优学生的心理成本会影响到学生本人，或者班上其他孩子。只要这个"完美"的学生一直处于领先地位，他可能会带着一种胜利者的感觉茁壮成长。然而，任何影响他地位的变数的变化，都会使他在队伍中的地位直线下降。这对自尊心和自信心会产生毁灭性的影响（见下面的个人故事）。在短短的几个月内，一个在奖励和比赛中的明星获奖者可能会变成一个拒绝学校和抑郁症的案例。在以后的生活中，优秀的学生可能会[将患躁郁症的风险提高三倍](https://supermemo.guru/wiki/Excellent_students_may_be_at_risk_of_bipolar_disorder)。
 
-## 坏学生
+在一个有 2 - 3 名优胜者的班级里，其余的孩子可能会感到不足。我之所以能在 22 年的学校教育中存活下来，是因为我不在乎。我喜欢赢，但还不至于放弃我的课外爱好。试图雇佣领导者来刺激失败者行动的老师可能会使这种感觉不足的情况变得更糟。我在做家教时也犯过这个错误。
+
+几十年来，获得最高荣誉的孩子们，即毕业生代表和国家优秀学者，在以后的生活中有着可怕的表现记录，这一直是一个可怕的学术秘密([约翰泰勒盖托](https://supermemo.guru/wiki/John_Taylor_Gatto))
+
+## 差生
 
 我一次次听到我的超级聪明的朋友说，他们是班里最差的一个。人类的大脑是一个伟大的概括者。这就是为什么它喜欢黑与白，而不是灰色的阴影。这就解释了为什么大多数人都说自己在学校里很优秀或者很糟糕。很少有人报告说自己的表现一般，从统计学上看，这应该是占主导地位的。然而，毫无疑问，还有第二个成分可以解释为什么伟大的人在学校表现不佳。
 
-老师们发现独创性的思想会造成混乱。学校不是孕育创新态度的沃土。
+**老师们发现独创性的思想[会造成混乱](https://supermemo.guru/wiki/Creativity:_Asset_or_Burden%3F)。学校不是孕育[创新态度](https://supermemo.guru/wiki/Confusing_creativity_with_ADHD)的沃土。**
 
-一位著名的辍学生比尔-盖茨，在小学时每得一个A就能得到25美分。然而，他的成绩一直很糟糕，会一直落后于他的姐姐，直到八年级时，姐姐对男生产生了兴趣。我们经常可以看到：学习成绩不好，并不排除会有伟大的成就。
+一位著名的[辍学生](https://supermemo.guru/wiki/School_dropouts)比尔-盖茨，在小学时每得一个优就能得到 25 美分。然而，[他的成绩一直很糟糕，会一直落后于他的姐姐，直到八年级时，姐姐对男生产生了兴趣](http://tech-insider.org/windows/research/1994/07.html)。我们经常可以看到：**学习成绩不好，并不排除会有伟大的成就。**
 
-平均来说，原创性、创造性在学校里会被压制。相反，那些比较循规蹈矩的学生更容易收集好成绩。这可能会导致 "GPA成瘾"，它可能会偏向于补习，而不是真正的学习，即源于激情和学习动力的学习。
+平均来说，原创性、创造力在学校里会被压制。相反，那些比较循规蹈矩的学生更容易收集好成绩。这可能会导致"GPA 成瘾"，它可能会偏向于[死记硬背](https://supermemo.guru/wiki/Cramming)，而不是真正的学习，即源于激情和[学习内驱力](https://supermemo.guru/wiki/Learn_drive)的学习。
 
 有的时候，优秀的学生获得了优秀的成绩，但在争取好成绩的过程中却受到了伤害。下面我列举几个案例。
 
 ## 例子：全优学生的个人故事
 
 ### 做一个好学生是对自由思维的一种消耗
-当我的一位最聪明的朋友丹尼尔抱怨 "我已经26岁了。大多数伟大的科学家在这个年龄已经取得了伟大的成就"，我善意地嘲笑了这个说法。丹尼尔超级聪明，数学很棒，精通科学，而且是最著名的常春藤盟校的研究生。他在科学领域的未来看起来很美好。只有纯粹的统计数据可能会阻止他获得诺贝尔奖。没有什么能阻止他取得诺贝尔级的成就。
 
-学校教育其实可能是丹尼尔对自己迄今为止的研究成果不满意的头号原因。他一直是个好学生。他对待学校的态度很认真。很容易。他上过好学校，甚至有过短暂的家庭教育。他已经完美地接受了做好科学工作所需的整套工具书的训练。他在基础科学理论方面的基础是一尘不染的。然而，多年来在普鲁士式教育中做一个好学生也是有代价的。
+当我的一位最聪明的朋友丹尼尔抱怨"我已经 26 岁了。大多数伟大的科学家在这个年龄已经取得了伟大的成就"，我善意地嘲笑了这个说法。丹尼尔超级聪明，数学很棒，精通科学，而且是最著名的常春藤盟校的研究生。他在科学领域的未来看起来很美好。只有纯粹的统计数据可能会阻止他获得诺贝尔奖。没有什么能阻止他取得诺贝尔级的成就。
 
-在我们的讨论中，我发现丹尼尔对学校教育对自由的限制表现出相当程度的容忍。这些限制容易使人产生循规蹈矩的态度。所有的学校教育都起源于培养社会中的循规蹈矩的成员。他们在极权制度下，为了极权的需要而被完善。丹尼尔甚至抛出了对成年人进行三角学等科目的义务教育的想法!
+学校教育其实可能是丹尼尔对自己迄今为止的研究成果不满意的头号原因。他一直是个好学生。他对待学校的态度很认真。很容易。他上过好学校，甚至有过短暂的[家庭教育](https://supermemo.guru/wiki/Homeschooling)。他已经完美地接受了做好科学工作所需的整套工具书的训练。他在基础科学理论方面的基础是一尘不染的。然而，多年来在普鲁士教育中做一个好学生也是有代价的。
 
-丹尼尔的技能和知识已经被训练得非常完美，现在他终于可以在诺贝尔奖的努力中运用了。然而，在这一路上，他可能失去了：（1）他可能会把数不清的时间用于自己的探索；（2）在自学、自励、自律方面的一些好习惯。甚至可能在自信心方面？
+在我们的讨论中，我发现丹尼尔对[学校教育](https://supermemo.guru/wiki/Schooling)对自由的限制表现出相当程度的容忍。这些限制容易使人产生循规蹈矩的态度。所有的学校教育都起源于培养社会中的循规蹈矩的成员。他们在极权制度下，为了极权的需要而被完善。丹尼尔甚至抛出了对成年人进行三角学等科目的义务教育的想法！
 
-在时间上的成本听起来并不那么糟糕，直到我们意识到那些早期的伟大科学发现大多来自于数小时和数年的修修补补、研究、探索和头脑风暴（往往只是和自己一起）。理论上，人们可能会把丹尼尔早熟的诺贝尔奖证书的缺失归咎于学校教育! 他从来没有机会。他总是忙于学校的常规工作。
+丹尼尔的技能和知识已经被训练得非常完美，现在他终于可以在诺贝尔奖的努力中运用了。然而，在这一路上，他可能失去了：（1）他可能会把[数不清的时间](https://supermemo.guru/wiki/Gray:_Self-education_carries_a_high_cost_in_time)用于自己的探索；（2）在[**自学**](https://supermemo.guru/wiki/Self-learning)、**自励**、自律方面的一些好习惯。甚至可能在[自信心](https://en.wikipedia.org/wiki/Self-confidence)方面？
 
-在循规蹈矩的习惯中付出的代价，也许到今天还在影响着他。然而，习惯的伤害似乎是可逆的。没有人天生就有完美的工作、生产、探索等态度。自律的基础是我们每天采用的一套微规则。请看下面粉色的个人轶事，我是如何锻炼自己的一套微规则的。
+在时间上的成本听起来并不那么糟糕，直到我们意识到那些早期的伟大科学发现大多来自于数小时和数年的修修补补、研究、探索和头脑风暴（往往只是和自己一起）。理论上，人们可能会把丹尼尔早熟的诺贝尔奖证书的缺失归咎于学校教育！ 他从来没有机会。他总是忙于学校的常规工作。
+
+在循规蹈矩的习惯中付出的代价，也许到今天还在影响着他。然而，习惯的伤害似乎是可逆的。没有人天生就有完美的工作、生产、探索等态度。自律的基础是我们每天采用的一套微规则。请看下面的个人轶事，我是如何锻炼自己的一套微规则的。
 
 好在丹尼尔现在已经为他的诺贝尔成就做好了完美的准备。我告诉他，只要永远不要带着任何遗憾回头看。那些可以作为一种自我实现的预言。我在这本书中的一个主要论点是，迟来的成就可能会更好。
 
 #### 飞得越高，跌倒的冲击力越大
 
-彼得-泰尔是一个好学生的例子，尽管他的求学方式是循规蹈矩的，但他还是走向了伟大。不过并非没有遗憾。他在攀登学历的时候，会保持在最优秀的行列中。不过在每一个级别上，他都注意到竞争越来越激烈。最后，他以一分之差错过了最高法院的工作。当时，他觉得自己简直就是一场灾难。然而，他的精神耐力很快让他重新认识到，失败是一种变相的祝福。他继续在商业上取得了疯狂的成功。如果他一直停留在自己的固定轨道上，就永远也不会取得那个他今天认为最珍贵的东西。对于一个彼得-蒂尔来说，有很多优秀的学生都是在闪光灯下办学，却在某些时候被挫折惊呆了。
+彼得-泰尔是一个好学生的例子，尽管他的求学方式是循规蹈矩的，但他还是走向了伟大。[不过并非没有遗憾](https://supermemo.guru/wiki/Thiel_on_competition_for_degrees)。他在攀登学历的时候，会保持在最优秀的行列中。不过在每一个级别上，他都注意到竞争越来越激烈。最后，他以一分之差错过了最高法院的工作。当时，他觉得自己简直就是一场灾难。然而，他的精神耐力很快让他重新认识到，失败是一种变相的祝福。他继续在商业上取得了疯狂的成功。如果他一直停留在自己的固定轨道上，就永远也不会取得那个他今天认为最珍贵的东西。对于彼得·蒂尔(Peter Thiel)来说，有很多好学生在教育过程中带着有色眼镜，结果却在某个时候被挫折惊呆了。
 
-#### 直升A的孩子没有时间去享受激情
-全A学生的主要问题是，他们忙着为学校学习，没有时间发展自己的激情。我喜欢读传记。我读了几百本，我总是关注早期生活，寻找决定伟大的因素。在我的印象中，很少有伟大人物的案例，他们都是优秀的好学生。恰恰相反，通常是叛逆型和自学型的人，才会涌现出伟大的人。在我在当地调查的孩子中，只有弗雷迪接近于直A标准。他的成绩很好，但并不完美。他对足球有热情。那是很好的。他还喜欢FIFA电脑游戏。然而，当我问他对学习的热情时，他不确定。他的爸爸试图提示他："来吧！你对一件事有很大的兴趣。你对一件事有很大的兴趣。想一想！"。弗雷迪回忆说，他经常花不少时间在地理、国旗、国家特征、首都等方面。他在一些地理竞赛中获奖。他知道摩纳哥作为一个城邦是自己的首都，然而，他不知道黑山的首都（波德戈里察）。我对他的激情之说提出质疑，说 "如果你要思考你的激情是什么，那就不能算是激情"。然而，这种 "激情 "最厉害的地方在于，它源于他对足球的兴趣。他喜欢多了解各个球队的情况。从这个意义上说，他在地理方面萌发的激情，除了对足球的热爱外，还可能发展成为一种有意义的追求。
+#### 全优的孩子没有时间去享受激情
 
-#### 无师自通者的教训
-无师自通者进入大学后，一个引人注目的事情是他们对普通学生的态度感到惊讶，他们似乎不太关心自己的成绩。在无学派人士看来，一个典型的通过义务教育操练出来的学生，仿佛是被调教出来的，他对这个体制不屑一顾。从无学籍者的角度看，他们似乎 "焦头烂额"。大学里的无师自通者觉得高速的肤浅学习让人不安。不是因为它难，而是因为它的效率低。自学是建立在自我节奏的基础上，这对其效率至关重要。不学无术的人都知道。弧形的学生被调教成快速冲刺材料，补习所需的小节，以获得合格的分数（见《学校教育的无用性》中谭雅的例子）。
+全优学生的主要问题是，他们忙着为学校学习，[没有时间发展自己的激情](https://supermemo.guru/wiki/Gray:_Self-education_carries_a_high_cost_in_time)。我喜欢读传记。我读了几百本，我总是关注早期生活，寻找决定伟大的因素。在我的印象中，很少有伟大人物的案例，他们都是优秀的好学生。恰恰相反，通常是叛逆型和自学型的人，才会涌现出伟大的人。在我在当地调查的孩子中，只有弗雷迪接近于全优标准。他的成绩很好，但并不完美。他对足球有热情。那是很好的。他还喜欢 FIFA 电脑游戏。然而，当我问他对学习的热情时，他不确定。他的爸爸试图提示他："来吧！你对一件事有很大的兴趣。你对一件事有很大的兴趣。想一想！"。弗雷迪回忆说，他经常花不少时间在地理、国旗、国家特征、首都等方面。他在一些地理竞赛中获奖。他知道摩纳哥作为一个城邦是自己的首都，然而，他不知道黑山的首都（波德戈里察）。我对他的激情之说提出质疑，说"如果你要思考你的激情是什么，那就不能算是激情"。然而，这种"激情"最厉害的地方在于，它源于他对足球的兴趣。他喜欢多了解各个球队的情况。从这个意义上说，他在地理方面萌发的激情，除了对足球的热爱外，还可能发展成为一种有意义的追求。
 
-彼得-格雷在调查无学籍学生时指出，在大学里，他们 "因为动机高，自我主动、自我指导和自我控制的能力强，所以成绩更好"
+#### 非学校教育者的教训
+
+非学校教育者进入大学后，一个引人注目的事情是他们对普通学生的态度感到惊讶，他们似乎不太关心自己的成绩。在非学校教育者看来，一个典型的通过义务教育操练出来的学生，仿佛是被调教出来的，他对这个体制不屑一顾。从非学校教育者的角度看，他们似乎"焦头烂额"。大学里的非学校教育者觉得高速的肤浅学习让人不安。不是因为它难，而是因为它的效率低。自学是建立在自我节奏的基础上，这对其效率至关重要。非学校教育者的人都知道。典型的学生被调教成快速冲刺材料，死记硬背所需的小节，以获得合格的分数（见《[学校教育的徒劳](https://supermemo.guru/wiki/Futility_of_schooling)》中谭雅的例子）。
+
+彼得-格雷在调查非学校教育者时指出，在大学里，他们"[因为动机高，自我主动、自我指导和自我控制的能力强，所以成绩更好](https://supermemo.guru/wiki/Gray_on_unschoolers_at_college)"
 
 ### 学校是如何摧毁自信心的
-Timothy(57岁)是一个典型的案例，一个直系A学生变成了一个永远不快乐的成年人，他的学校记忆。
 
-提摩西在小学时是一个直系A级学生。到了高中，门槛更高了。仅仅几次跌跌撞撞，他就失去了自信心。在新的环境中，他没有家的感觉。他被贴上了 "学困生 "的标签。这对他的表现产生了巨大的影响。他真的在班级里跌落到了倒数第一。当他尝试考大学时，他尝试得毫无热情。他之所以选择大学，是因为这是一所好学校，有好的工作前景。他并不是因为热爱而选择它。他一直在用他那老掉牙的补习方法，但他的心思总是在别的地方。他在学习上没有什么进步。他两次高考都没有通过，于是放弃了。他进入了一所较差的大学，出乎所有人的意料，包括他自己在内，他又开始闪亮登场。他恢复了他的全A状态。我推测，他也证实了：当领导给了他学习的翅膀，掉级搞乱了他的心理，学习会崩溃。竞争对一些学生来说是有毒的! 蒂莫西有一个惊人的社会大脑。他似乎记得所有的同学。他知道他们的工作，孩子，还有谁什么时候死的，什么原因死的。同样，尽管他从未接受过技术学科的教育，但他似乎对移动技术了如指掌。同时，在他自己的领域，蒂莫西没有表现出对学习和知识的热情。他认为自己的教育是失败的。当他见到他的高中老友时，那些失败的大学考试似乎占据了他的思想。虽然他的知识和经验在工作中备受尊重，但回到高中公司后，他又退回到一个弱小的奋斗学生的老行为体系中。在这个意义上，他和塔玛拉非常相似（参见她在《学校如何毁掉人生》中的案例）。高中是一个黑暗的时期，给蒂莫西的职业，和个人生活投下了阴影。Timothy对女儿的教育非常重视。她们分别是11岁和18岁。他决心让女儿们远离他的经历。到目前为止，一切都很好。
+蒂莫西(57 岁)是一个典型的例子，一个全优学生变成了一个对自己的学校记忆永远不满意的成年人。
+
+提摩西在小学时是一个全优学生。到了高中，门槛更高了。仅仅几次跌跌撞撞，他就失去了自信心。在新的环境中，他没有家的感觉。他被贴上了"学困生"的标签。这对他的表现产生了巨大的影响。他真的在班级里跌落到了倒数第一。当他尝试考大学时，他尝试得毫无热情。他之所以选择大学，是因为这是一所好学校，有好的工作前景。他并不是因为热爱而选择它。他一直在用他那老掉牙的死记硬背方法，但他的心思总是在别的地方。他在学习上没有什么进步。他两次高考都没有通过，于是放弃了。他进入了一所较差的大学，出乎所有人的意料，包括他自己在内，他又开始闪亮登场。他恢复了他的全优状态。我推测，他也证实了：当领导给了他学习的翅膀，排名的下降使他的思维混乱，学习也会崩溃。**竞争对一些学生来说是有毒的！** 蒂莫西有一个惊人的社会大脑。他似乎记得所有的同学。他知道他们的工作，孩子，还有谁什么时候死的，什么原因死的。同样，尽管他从未接受过技术学科的教育，但他似乎对移动技术了如指掌。同时，在他自己的领域，蒂莫西没有表现出对学习和知识的热情。他认为自己的教育是失败的。当他见到他的高中老友时，那些失败的大学考试似乎占据了他的思想。虽然他的知识和经验在工作中备受尊重，但遇到高中的伙伴后，他又退回到一个软弱挣扎的学生的老行为体系中。在这个意义上，他和塔玛拉非常相似（参见她在《[学校是如何毁掉一个人的生活](https://supermemo.guru/wiki/How_school_can_ruin_a_life)》中的案例）。高中是一个黑暗的时期，给蒂莫西的职业，和个人生活投下了阴影。Timothy 对女儿的教育非常重视。她们分别是 11 岁和 18 岁。他决心让女儿们远离他的经历。到目前为止，一切都很好。
 
 ### 学校如何摧毁对学习的热爱
 
-8年来，罗尼在小学和中学都是全A的学生。他被认为是全校最好的学生。和我调查的大多数优胜者一样，他喜欢学习，喜欢上学。事情在高中发生了巨大的变化。他去了他所在城市最好的学校，突然面临更激烈的竞争。此外，学习量也大大增加。他对学习的热爱被不知所措的感觉所取代。他无法跟上老师的要求。就像谭雅的情况一样，他总是抱怨得到更多的功课，而这些功课是人力所能处理的。没过多久，罗尼就开始讨厌他的学习经历和学校。他每天的前半段时间都被学校填满，放学后他要去见他的私人家教，补习最难的科目。傍晚时分，他在看书的时候，脑子真的要睡着了，经常在翻作业。更糟糕的是，他的成绩下滑了。他现在只是一个普通的学生，就在队伍的中间。他看了看直男A，似乎总有那么一两个人。他一直在想，"他们做对了什么，我没有做"。也许他们有更好的书。也许他们的父母有更多的钱去请更好的家教。对于这个问题，他始终找不到满意的答案。他可能陷入了郁闷的默认："我没有他们那么好"。这正是发生在蒂莫西身上的影响终生的事情。然而，罗尼复制了我自己的幸运，他赢得了一场地理竞赛。他成了波兰的佼佼者。他否定了自己成绩的重要性，他说，参赛者并不多，而且这是一个特殊的比赛品种，只有子集的学校参加。罗尼讨厌学校，但他没有失去自信。为了和别人快速比较，我对罗尼进行了历史和英语的测试。现在26岁的罗尼几乎完全忘记了历史。那些补习时间和失眠都白费了。相比之下，他的英语很好。不过，他把这归功于SuperMemo和出国留学。高中毕业时，罗尼开始使用SuperMemo。他掌握了大量的英语和德语词汇。这使他有可能通过德国大学的考试。与Timothy不同的是，Ronnie的故事有一个圆满的结局。他是60名学生中唯一的外国学生，也是少数没有接受过实战训练的学生之一。这使得他在德国的起步非常艰难。然而，他不是尖子生不会困扰他。他终于能在自己喜欢的人中间学习感兴趣的东西，并为自己的人生设定了一个伟大的目标。他所在的小组只有一半人毕业。在这一点上，他认为自己的学位是令人尖叫的成功。与历史相比，他的化学和物理知识相当不错。他把高中那些讨厌的补习岁月都归功于他。不过，他承认，如果能按照自己的节奏学习，他会做得更好。最重要的是，他在学习方面成为了一个生活家。他的学习动力现在又恢复了。他花了很大一部分时间来研究新事物，只是因为他觉得有趣。他是《国家地理》的瘾君子。他很少错过用SuperMemo学习的一天。他相信，如果在高中时给他同样的自主学习机会，他在大学前的四年可能会更愉快，更有效率。
+ 8 年来，罗尼在小学和中学都是全优的学生。他被认为是全校最好的学生。和我调查的大多数优胜者一样，他喜欢学习，喜欢上学。事情在高中发生了巨大的变化。他去了他所在城市最好的学校，突然面临更激烈的竞争。此外，学习量也大大增加。他对学习的热爱被不知所措的感觉所取代。他无法跟上老师的要求。就像谭雅的情况一样，他总是抱怨得到更多的功课，而这些功课是人力所能处理的。没过多久，罗尼就开始讨厌他的学习经历和学校。他每天的前半段时间都被学校填满，放学后他要去见他的私人家教，死记硬背最难的科目。傍晚时分，他在看书的时候，脑子真的要睡着了，经常在翻作业。更糟糕的是，他的成绩下滑了。他现在只是一个普通的学生，就在队伍的中间。他看了看全优的朋友，似乎总有那么一两个人。他一直在想，"他们做对了什么，我没有做"。也许他们有更好的书。也许他们的父母有更多的钱去请更好的家教。对于这个问题，他始终找不到满意的答案。他可能陷入了郁闷的默认："我没有他们那么好"。这正是发生在蒂莫西身上的影响终生的事情。然而，罗尼复制了我自己的幸运，他赢得了一场地理竞赛。他成了波兰的佼佼者。他否定了自己成绩的重要性，他说，参赛者并不多，而且这是一个种特殊的比赛，只有一小部分学校参加。罗尼讨厌学校，但他没有失去自信。为了和别人快速比较，我对罗尼进行了历史和英语的测试。现在 26 岁的罗尼几乎完全忘记了历史。那些死记硬背时间和失眠都白费了。相比之下，他的英语很好。不过，他把这归功于 SuperMemo 和出国留学。高中毕业时，罗尼开始使用 SuperMemo 。他掌握了大量的英语和德语词汇。这使他有可能通过德国大学的考试。与 Timothy 不同的是， Ronnie 的故事有一个圆满的结局。他是 60 名学生中唯一的外国学生，也是少数没有接受过实战训练的学生之一。这使得他在德国的起步非常艰难。然而，他不是尖子生不会困扰他。他终于能在自己喜欢的人中间学习感兴趣的东西，并为自己的人生设定了一个伟大的目标。他所在的小组只有一半人毕业。在这一点上，他认为自己的学位是令人尖叫的成功。与历史相比，他的化学和物理知识相当不错。他把高中那些讨厌的死记硬背岁月都归功于此。不过，他承认，如果能按照自己的节奏学习，他会做得更好。最重要的是，他在学习方面成为了一个生活家。他的[学习内驱力](https://supermemo.guru/wiki/Learn_drive)现在又恢复了。他花了很大一部分时间来研究新事物，只是因为他觉得有趣。他是《国家地理》的瘾君子。他很少错过用 SuperMemo 学习的一天。他相信，如果在高中时给他同样的自主学习机会，他在大学前的四年可能会更愉快，更有效率。
 
 ### 学校如何摧毁自我激励
-我无法引用任何好的研究来证明GPA成瘾会导致以后的生活表现低下，然而，在我的采访中，我听到很多人从好学生变成了无助的成年人，他们怀疑自己在学校里的循规蹈矩态度把以后的生活搞得一团糟。
+
+我无法引用任何好的研究来证明 GPA 成瘾会导致以后的生活表现低下，然而，在我的采访中，我听到很多人从好学生变成了无助的成年人，他们怀疑自己在学校里的循规蹈矩态度把以后的生活搞得一团糟。
 
 安东尼在小学时一直是个好学生。他顺应得很好。到了高中，他的学校纪律开始滞后，但他把由此产生的自由变成了青少年的分心，而不是自我学习或自我发展。无论他从小学带着怎样的循规蹈矩的印记，都让他无法将生活掌握在自己手中。在大学里，安东尼顺势而为。他没有试图给世界留下深刻印象，也没有为自己的自由而奋斗。
 
-大学毕业后，如今30岁的安东尼有了创业的计划，但他却永远犹豫不决。这其中有的是犹豫不决，有的是对自己的选择感到不安，有的是需要完美的学校式的生活秩序，有的是需要别人监督的安全感。甚至他的女朋友似乎总是统治着这段关系，而Anothony似乎很享受这个事实。
+大学毕业后，如今 30 岁的安东尼有了创业的计划，但他却永远犹豫不决。这其中有的是犹豫不决，有的是对自己的选择感到不安，有的是需要完美的学校式的生活秩序，有的是需要别人监督的安全感。甚至他的女朋友似乎总是统治着这段关系，而 Anothony 似乎很享受这个事实。
 
-当安东尼在他现在的工作场所在监督下工作时，有固定的规则和最后期限，他的表现非常出色。他很受欢迎，被认为是一个完美的专业人士。然而，当安东尼获得自由并被要求进行创造性的翱翔时，他承认自己会蜷缩成无为状态。"我只是没有它在我身上。没有老板和截止日期，我似乎永远都在拖延。我缺乏自律。我在健身房里是个好榜样"。他的体格令人印象深刻! "但是当涉及到创造性的工作时，我就会拖延到恨自己的地步"。
+当安东尼在他现在的工作场所在监督下工作时，有固定的规则和最后期限，他的表现非常出色。他很受欢迎，被认为是一个完美的专业人士。然而，当安东尼获得自由并被要求进行创造力的翱翔时，他承认自己会蜷缩成迟钝状态。"我只是身上没有它。没有老板和截止日期，我似乎永远都在拖延。我缺乏自律。我在健身房里是个好榜样"。他的体格令人印象深刻！"但是当涉及到创造力的工作时，我就会拖延到恨自己的地步"。
 
-学校教育并不能让现代的孩子们做好准备，以应对21世纪经济快速变化的不确定性。缺少的主要因素是缺乏做出选择、自我激励和自律的训练。Rote学习导致记忆不持久或在十年内变得无关紧要。学校教育让孩子们裸露在冰面上!
+学校教育并不能让现代的孩子们做好准备，以应对 21 世纪经济快速变化的不确定性。缺少的主要因素是缺乏做出选择、自我激励和自律的训练。Rote 学习导致记忆不持久或在十年内变得无关紧要。**学校教育让孩子们裸露在冰面上！**
 
 ### 严师，易师
+
 轻松的老师教得少。严厉的老师引发对学习的仇恨。优秀的老师能发挥孩子的激情。最后，结果主要取决于孩子，她的个性和兴趣。
 
-卡西娅是一个爱笑的16岁女孩。我认识她的时候，她还是个爱说话的3岁孩子。她是操场上最可爱的孩子。我踢足球，她会带着她的狗跟着我，认真地问问题。在她的问题中，她是一个真正的小神童。在学校里，她是个全A的学生。然而，这是一个不同类型的直A，每个人都喜欢Kasia。她对每个人都很好，她不惹事，她没有恶意。所有老师也都喜欢卡西娅。这是她取得好成绩的公式。她其实根本不需要学习什么。老师总是会把她从麻烦中解救出来。小学6年，生活很有趣，很轻松。卡西娅总是不停地问问题。越来越多的时候，我都会问她关于大学的事情。聪明的孩子应该有最好的选择 她想成为什么样的人？她从来没有给过我答案。她不知道 卡西娅上中学后，情况发生了巨大的变化。她家迎来了一个小她12岁的妹妹，卡西娅不再是家庭生活的中心。新的老师提出了新的要求，他们似乎也不那么爱她了。她没有从小学带来那么多的知识，这让初中阶段的生活更加艰难。到了青春期，我发现Kasia的笑容少了。她看起来没有以前那么开心了。她仍然很好，很有礼貌，但没有像以前那样流露出那么多的活力。
+卡西娅是一个爱笑的 16 岁女孩。我认识她的时候，她还是个爱说话的 3 岁孩子。她是操场上最可爱的孩子。我踢足球，她会带着她的狗跟着我，认真地问问题。在她的问题中，她是一个真正的小神童。在学校里，她是个全优的学生。然而，这是一个不同类型的全优，每个人都喜欢 Kasia 。她对每个人都很好，她不惹事，她没有恶意。所有老师也都喜欢卡西娅。这是她取得好成绩的公式。她其实根本不需要学习什么。老师总是会把她从麻烦中解救出来。小学 6 年，生活很有趣，很轻松。卡西娅总是不停地问问题。越来越多的时候，我都会问她关于大学的事情。聪明的孩子应该有最好的选择 她想成为什么样的人？她从来没有给过我答案。她不知道卡西娅上中学后，情况发生了巨大的变化。她家迎来了一个小她 12 岁的妹妹，卡西娅不再是家庭生活的中心。新的老师提出了新的要求，他们似乎也不那么爱她了。她没有从小学带来那么多的知识，这让初中阶段的生活更加艰难。到了青春期，我发现 Kasia 的笑容少了。她看起来没有以前那么开心了。她仍然很好，很有礼貌，但没有像以前那样流露出那么多的活力。
 
-当我想知道孩子们在学校里的表现时，我使用了一个简单的技巧，我转向英语。这样我们就可以继续聊他们喜欢的话题，而我也可以对学校的教育效率有自己的见解。不用说，在大多数情况下，我很快就会被迫切换回波兰语，否则其实就没什么对话了。在较长一段时间里，我试图测试卡西娅的英语。我的印象是，她对英语总是避重就轻。很容易搞清楚，她只是羞于承认自己学了9年的语言不会说。当我不断坚持的时候，不知什么时候，她变的很直白："我连自我介绍都不会！" 这话听起来有点像 "别再烦我了，你还想怎样，怪学校吧！"。对她来说，库巴的2400字听起来就像是世界级的成绩。我请她解释这个悖论。她是如何在不学无术的情况下保持好成绩的？对她来说，就是为了通过下一次考试。她会做作业，通过考试，拿到成绩，忘记，然后继续前进。她的英语课的难易程度从来没有一直在进步。如果她遇到困难，老师经常会用一些关于猫的套题来保举她。她总结为 "我只需要知道如何用英语给猫起名字就可以了"。她的老师是一位真正有爱心的女士，她尽力鼓励和教导，但绝不会用级鞭伤害一只苍蝇。每次卡西娅在市区遇到她的老师时，他们都会就她的未来进行一次对话。为什么有些老师会容忍班上的学生完全没有进步？因为他们接受了不可避免的现状：孩子们学得快忘得也快。老师做一个无情的刽子手，只能给年轻的生命增加压力，让孩子们更讨厌学校。他们认为学校是一种锻炼，无论如何都是徒劳的。卡西亚的老师不相信严厉的成绩可以让孩子们更加努力。问题是，宽大处理可能会在后期起到反作用。卡西娅的妈妈补充道。卡西娅从来没有真正喜欢过英语。
+当我想知道孩子们在学校里的表现时，我使用了一个简单的技巧，我转向英语。这样我们就可以继续聊他们喜欢的话题，而我也可以对学校的教育效率有自己的见解。不用说，在大多数情况下，我很快就会被迫切换回波兰语，否则其实就没什么对话了。在较长一段时间里，我试图测试卡西娅的英语。我的印象是，她对英语总是避重就轻。很容易搞清楚，她只是羞于承认自己学了 9 年的语言不会说。当我不断坚持的时候，不知什么时候，她变的很直白："我连自我介绍都不会！"这话听起来有点像"别再烦我了，你还想怎样，怪学校吧！"。对她来说，[库巴的 2400 词](https://supermemo.guru/wiki/13_years_of_school_in_a_month)听起来就像是世界级的成绩。我请她解释这个悖论。她是如何在不学无术的情况下保持好成绩的？对她来说，就是为了通过下一次考试。她会做作业，通过考试，拿到成绩，忘记，然后继续前进。她的英语课的难易程度从来没有一直在进步。如果她遇到困难，老师经常会用一些关于猫的套题来保举她。她总结为"我只需要知道如何用英语给猫起名字就可以了"。她的老师是一位真正有爱心的女士，她尽力鼓励和教导，但绝不会用级鞭伤害一只苍蝇。每次卡西娅在市区遇到她的老师时，他们都会就她的未来进行一次对话。为什么有些老师会容忍班上的学生完全没有进步？因为他们接受了不可避免的现状：孩子们学得快忘得也快。老师做一个无情的刽子手，只能给年轻的生命增加压力，让孩子们更讨厌学校。他们认为学校是一种锻炼，无论如何都是徒劳的。卡西亚的老师不相信严厉的成绩可以让孩子们更加努力。问题是，宽大处理可能会在后期起到反作用。卡西娅的妈妈补充道。卡西娅从来没有真正喜欢过英语。
 
-对于卡西娅来说，学习英语成了初中时的一个严重问题。她现在的英语老师，用卡西娅的话说，是个 "没心没肺 "的人。他可以在一节课上发几个坏成绩。他对自己的目的直言不讳，"学习和学好英语是你自己的兴趣。我的工作就是讲解和评分。期望不要宽大处理"。尽管采取了这种两极对立的策略，但Kasia在英语方面的进步却微乎其微。在她看来，她的基础知识还达不到新老师的要求。她的妈妈考虑送卡西娅去上私人辅导班。问题是，卡西娅现在真的很讨厌英语。英语现在是噩梦的来源。卡西娅可能会考虑上私人课，但她现在心不在焉。她恋爱了。私教课会占用她为数不多的空闲时间，她的男朋友是当地有名的少年足球天才。和男友在一起的时间是平静的，安详的，无忧无虑的。所有与学校有关的事情，她现在都会联想到压力和麻烦。现在学校已经让卡西娅和妈妈之间产生了隔阂。当我建议 "我可以和你妈妈谈谈...... "时，卡西娅对我说："不，这只会让我妈妈生气。"卡西娅的妈妈是个好妈妈。卡西娅的妈妈是一个很好的，通情达理，但又很严厉的女士。他们一直是一个很好的团队。很难理解为什么他们的沟通会因为学校的麻烦而那么快崩溃。部分问题是，直到现在，卡西娅的社交活动主要是通过Facebook。她的妈妈很乐意看到女儿做作业、上网见朋友，在家安全地待着。现在，误解的差距不断扩大，卡西娅不在家又是一个冲突的源头，它为正反馈的螺旋式上升提供了动力，促使卡西娅远离学校。
+对于卡西娅来说，学习英语成了初中时的一个严重问题。她现在的英语老师，用卡西娅的话说，是个"没心没肺"的人。他可以在一节课上发几个坏成绩。他对自己的目的直言不讳，"学习和学好英语是你自己的兴趣。我的工作就是讲解和评分。期望不要宽大处理"。尽管采取了这种两极对立的策略，但 Kasia 在英语方面的进步却微乎其微。在她看来，她的基础知识还达不到新老师的要求。她的妈妈考虑送卡西娅去上私人辅导班。问题是，卡西娅现在真的很讨厌英语。英语现在是噩梦的来源。卡西娅可能会考虑上私人课，但她现在心不在焉。她恋爱了。私教课会占用她为数不多的空闲时间，她的男朋友是当地有名的少年足球天才。和男友在一起的时间是平静的，安详的，无忧无虑的。所有与学校有关的事情，她现在都会联想到压力和麻烦。现在学校已经让卡西娅和妈妈之间产生了隔阂。当我建议"我可以和你妈妈谈谈......"时，卡西娅对我说："不，这只会让我妈妈生气。"卡西娅的妈妈是个好妈妈。卡西娅的妈妈是一个很好的，通情达理，但又很严厉的女士。他们一直是一个很好的团队。很难理解为什么他们的沟通会因为学校的麻烦而那么快崩溃。部分问题是，直到现在，卡西娅的社交活动主要是通过 Facebook。她的妈妈很乐意看到女儿做作业、上网见朋友，在家安全地待着。现在，误解的差距不断扩大，卡西娅不在家又是一个冲突的源头，它为正反馈的螺旋式上升提供了动力，促使卡西娅远离学校。
 
-我又问了一个关于大学的不朽问题。16岁的卡西娅的梦想是朦胧的，但它们的重心却很低。她谈到了一所职业学校。她提出，她没才能再往上走。甚至连高中都没有。当我深究的时候，她透露了一个爆炸性的消息：她其实会放心的留级。这样可以让她放慢脚步，抓紧学习，重新思考自己的人生，找点时间陪陪男朋友，总之，可以降低生活中不断从四面八方挤上来的压力。唯一害怕的是她妈妈的反应。当我后来和老师们聊起这种自杀式的留级愿望时，发现这种情况非常普遍。似乎孩子们常常把留级看成是在疯狂的课程竞赛中喘息的机会。几个月后，卡西娅英语不及格，现在正在留级。不过她似乎很高兴。我的成绩上升了 我又觉得自己是个胜利者。好的成绩将帮助我进入更好的学校!
+我又问了一个关于大学的不朽问题。16 岁的卡西娅的梦想是朦胧的，但它们的重心却很低。她谈到了一所职业学校。她提出，她没才能再往上走。甚至连高中都没有。当我深究的时候，她透露了一个爆炸性的消息：她其实会放心的留级。这样可以让她放慢脚步，抓紧学习，重新思考自己的人生，找点时间陪陪男朋友，总之，可以降低生活中不断从四面八方挤上来的压力。唯一害怕的是她妈妈的反应。当我后来和老师们聊起这种自杀式的留级愿望时，发现这种情况非常普遍。似乎孩子们常常把留级看成是在疯狂的课程竞赛中喘息的机会。几个月后，卡西娅英语不及格，现在正在留级。不过她似乎很高兴。我的成绩上升了 我又觉得自己是个胜利者。好的成绩将帮助我进入更好的学校！
 
 我对卡西娅的建议是，专注于学习她最喜欢的东西。这将帮助她至少在一个领域变得强大。这将使她重拾自信。在某一领域的强势可以成为对抗其他老师，或者她妈妈，或者整个学校压力的武器。
 
 其次，她要注意在(1)学习和(2)与男友的排解时间之间找到合适的比例。合适的比例会帮助她最大限度地获得全面的成功。
 
-### 最佳严厉度水平
+### 最佳严厉水平
+
 卡西娅从超级轻松到超级严厉的老师，极不寻常的转换，这就需要做一点理论上的分化。如果顺序反过来，卡西娅在小学里有一个严厉的老师，她会做得更好吗？或者说，如果她这些年只和一种类型的老师相处？
 
 幼年时期的严苛老师很容易造成对某一学科的终身不喜欢。轻松的老师没有足够的注意力，无法在学习和遗忘之间取得平衡。我一直比较喜欢轻松的老师，因为轻松的老师意味着自由，有机会发展自己的兴趣或角度。
 
-我认识几十个孩子，他们的老师风格和个性都有不同的组合。除了少数与个人兴趣和爱好有关的例外，结果难免惨淡。我在这里和这里解释我自己的案例。老师可以帮助孩子，也可以让事情变得更糟，但最终决定结果的还是孩子的个性、兴趣和激情。学校的重要性只在于它偷走了孩子的大部分时间。它压抑了激情。因为学校，青春不再是人生中最美好的时光。
+我认识几十个孩子，他们的老师风格和个性都有不同的组合。除了少数与个人兴趣和爱好有关的例外，结果难免惨淡。我在[这里](https://supermemo.guru/wiki/Schools_are_useless_in_teaching_English!#My_tribulations_with_English)和[这里](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning#I_learned_no_history_at_school)解释我自己的案例。老师可以帮助孩子，也可以让事情变得更糟，但最终决定结果的还是孩子的个性、兴趣和激情。学校的重要性只在于它偷走了孩子的大部分时间。它压抑了激情。因为学校，青春不再是人生中最美好的时光。
 
-卡西娅的朋友贾古达也是在严苛的老师下花了同样的时间学习英语，出来的效果还不错。至少在成绩和基本的对话能力方面。Jagoda的进步让Kasia羡慕不已。卡西娅和她的妈妈认为，小学时的严苛老师会做得更好。这种默认的想法是很自然的。如果 "轻松 "不行，也许 "严厉 "就可以。我的赌注是，只有当卡西娅真的能在现实生活中运用英语，并开始喜欢上英语时，严厉的老师才会对她有用。否则，她对这门语言的恨意可能会翻两番，却不会给她增加多少知识。
+卡西娅的朋友贾古达也是在严苛的老师下花了同样的时间学习英语，出来的效果还不错。至少在成绩和基本的对话能力方面。Jagoda 的进步让 Kasia 羡慕不已。卡西娅和她的妈妈认为，小学时的严厉老师会做得更好。这种默认的想法是很自然的。如果"轻松"不行，也许"严厉"就可以。我的赌注是，只有当卡西娅真的能在现实生活中运用英语，并开始喜欢上英语时，严厉的老师才会对她有用。否则，她对这门语言的恨意可能会翻两番，却不会给她增加多少知识。
 
-从严厉到轻松的过渡也能起到不错的效果。有一个害羞的Victoria Ch.今年12岁。她在波兰学校的成绩很差。她总是被吓到。后来她搬到挪威，开始在学校里大放异彩。她喜欢这里友好的气氛，并以良好的学习回报。这正是我在1975年转学时发生的事情。对另一个孩子来说，从严酷到轻松，或者反过来，都会有难以预料的结果。这就是心理学的问题。在学校里，学习的进度很难令人满意。
+从严厉到轻松的过渡也能起到不错的效果。有一个害羞的 Victoria Ch. 今年 12 岁。她在波兰学校的成绩很差。她总是被吓到。后来她搬到挪威，开始在学校里大放异彩。她喜欢这里友好的气氛，并以良好的学习回报。这正是我在 [1975 年转学时](https://supermemo.guru/wiki/Dangers_of_being_a_Straight_A_student#Chemistry_streak_.28Apr_1975_-_May_1976.29)发生的事情。对另一个孩子来说，从严酷到轻松，或者反过来，都会有难以预料的结果。这就是心理学的问题。在学校里，学习的进度很难令人满意。
 
-Vicky女王的进步和Kasia类似。她在小學時有一位容易的老師，在中學時則有一位嚴厲的老師。当她拒绝和我说英语说 "我们在波兰，我为什么要说英语？"时，我怀疑她的英语水平很差。"我们在波兰 "是一个经常使用的防御性面具。一段时间后，她才承认，尽管她是个全A的学生，但她的英语很糟糕。和卡西娅一样，维多利亚也声称，小学时一个严厉的老师可能会有所帮助。这可能是一种错觉，也是希望改变过去的愿望。孩子们假设错了。经过简短的分析，Victoria同意我的观点：真正的问题是英语不是她的激情。严厉的老师只能让事情变得更糟。孩子们或家长们都没有意识到，他们可能会很快开始讨厌这门学科。他们渴望改变，渴望军纪或任何能改变现状的东西。一个优秀的老师会发挥每个孩子的优势和需求。结晶的过程是缓慢而混乱的。这就是为什么天使般的耐心是一个优秀老师的最佳特征之一。她需要知道什么时候该放弃，什么时候该等待，什么时候该稍微用力。如果我最好的老师不能激发我学习英语的热情，尽管我对理科和生化的思维已经成熟，但我对实行改变持怀疑态度。短暂的出国旅行能做的不仅仅是教师团队。它影响的根本原因是：积极性差。
+ [Vicky](https://supermemo.guru/wiki/Social_groups_in_socialization#Are_they_rowdy.3F) 的进步和 Kasia 类似。她在小学时有一位容易的老師，在中学时則有一位严厉的老師。当她拒绝和我说英语说"我们在波兰，我为什么要说英语？"时，我怀疑她的英语水平很差。"我们在波兰"是一个经常使用的防御性面具。一段时间后，她才承认，尽管她是个全优的学生，但她的英语很糟糕。和卡西娅一样，维多利亚也声称，小学时一个严厉的老师可能会有所帮助。这可能是一种错觉，也是希望改变过去的愿望。孩子们假设错了。经过简短的分析， Victoria 同意我的观点：真正的问题是英语不是她的激情。严厉的老师只能让事情变得更糟。孩子们或家长们都没有意识到，他们可能会很快开始讨厌这门学科。他们渴望改变，渴望军纪或任何能改变现状的东西。一个优秀的老师会发挥每个孩子的优势和需求。[结晶的过程](https://supermemo.guru/wiki/Knowledge_crystallization)是缓慢而混乱的。这就是为什么[天使般的耐心](https://supermemo.guru/wiki/Alfie_Kohn:_Teachers_need_extraordinary_patience)是一个优秀老师的最佳特征之一。她需要知道什么时候该放弃，什么时候该等待，[什么时候该稍微用力](https://supermemo.guru/wiki/Push_zone)。如果我最好的老师不能激发我学习英语的热情，尽管我对理科和生化的思维已经成熟，但我对实行改变持怀疑态度。短暂的出国旅行能做的不仅仅是教师团队。它影响的根本原因是：[积极性差](https://supermemo.guru/wiki/How_can_I_motivate_a_child_extrinsically%3F)。
 
 #### 我最严厉的老师
-个人轶事。为什么要用轶事呢？
 
-我有很多容易的老师，而且都喜欢他们。除了一个老师之外，我从来没有被严厉的老师所困扰或影响。我在14岁的时候遇到了最严厉的老师。在他的第一节课上，我忙着和朋友聊天，而且很捣乱。不知什么时候，我被人用本子狠狠地敲了一下脑袋。这就是老师。他看上去很生气。下课后，我去找老师道歉! 这事多年后我很难解释，但我认为这是我用来安抚老板的一种社交技巧。这招果然灵验。他看上去完全被吓到了，而且非常高兴。我和老师成了很好的朋友，尽管我完全讨厌他的特殊科目：军事技术（即变态共产主义课程的典型例子）。老师对其他学生还是很严厉的，但我却成了他的宠物。他的课可能是唯一一个我不想让他失望的课。我会在休息的时候做一些最低限度的阅读，只为确保能保住自己的宠物身份。最后，是老师统治了那次社交活动。第一节课后，我骗他喜欢上了我。这是我的小战术胜利。他把我骗到一整年的顺从。那是他巨大的战略胜利。他让我学会了一点点。他让我坐稳了脚跟，顺从了他。他的影响是巨大的，因为叛逆是我的名字。他驯服了一个桀骜不驯的小屁孩。我对那段时光有着美好的回忆，但我仍然讨厌这个话题。不用说，我对所学的东西没有印象。没有兴趣，没有复习，没有记忆。
+个人轶事
+
+我有很多轻松的老师，而且都喜欢他们。除了一个老师之外，我从来没有被严厉的老师所困扰或影响。我在 14 岁的时候遇到了最严厉的老师。在他的第一节课上，我忙着和朋友聊天，而且很捣乱。不知什么时候，我被人用本子狠狠地敲了一下脑袋。这就是老师。他看上去很生气。下课后，我去找老师道歉！ 这事多年后我很难解释，但我认为这是我用来安抚老板的一种[社交技巧](https://supermemo.guru/wiki/Optimal_socialization)。这招果然灵验。他看上去完全被吓到了，而且非常高兴。我和老师成了很好的朋友，尽管我完全讨厌他的特殊科目：军事技术（即变态共产主义课程的典型例子）。老师对其他学生还是很严厉的，但我却成了他的宠物。他的课可能是唯一一个我不想让他失望的课。我会在休息的时候做一些最低限度的阅读，只为确保能保住自己的宠物身份。最后，是老师统治了那次社交活动。第一节课后，我骗他喜欢上了我。这是我的小战术胜利。他把我骗到一整年的顺从。那是他巨大的战略胜利。他让我学会了一点点。他让我坐稳了脚跟，顺从了他。他的影响是巨大的，因为叛逆是我的名字。他驯服了一个桀骜不驯的小屁孩。我对那段时光有着美好的回忆，但我仍然讨厌这个话题。不用说，我对所学的东西没有印象。没有兴趣，没有复习，没有记忆。
 
 ### 老师的宠物顿悟
-Heather Svanidze是一名翻译，她经历了各级学校的教育，成绩都是全A。几年后，有了三个小孩，她经历了一次转换。在我自己的认识的镜像中，她发现大部分 "真正的教育 "发生在她的 "空闲时间 "里，而她由于学校教育的缘故，没有多少时间。她决定对孩子进行家庭教育。她的故事可以这样总结。
 
-我从幼儿园到高中都是全A 我无法将这种成功转移到真实的工作世界中去 你可以说我唯一擅长的工作就是当一名学生 [......]没有了成绩和考试的激励，我发现自己缺乏动力和纪律。没有人告诉我如何安排我的时间，我发现自己在浪费时间[......]我从来没有学会为了完成好工作或热爱学习而激励自己[......]我对数学的热爱在学校里慢慢死去[......]。我的日程安排非常繁忙--学校、音乐课、舞蹈、体育、教堂和学生领导--这意味着我经常从早上7点跑到晚上9点半，之后我还要做作业，经常过了午夜[......]我没有时间去发现自己的激情和天职[......]我还记得每当我因为感冒而不得不取消一节课或一门课时，我会感到无比的轻松。哦，有一两个小时没有安排的时间，阅读、思考或只是做人，是多么的甜蜜。
+Heather Svanidze 是一名翻译，她经历了各级学校的教育，成绩都是全优。几年后，有了三个小孩，她经历了一次转换。在我自己的认识的镜像中，她发现大部分"真正的教育"发生在她的"空闲时间"里，而她由于学校教育的缘故，没有多少时间。她决定对孩子进行家庭教育。她的故事可以这样总结：
 
-希瑟说她只擅长做学生。我想补充的是，她也是一个伟大的作家。她的故事很有说服力。在这里阅读它。
+> 我从幼儿园到高中都是全优。我无法将这种成功转移到真实的工作世界中去 你可以说我唯一擅长的工作就是当一名学生 [......]没有了成绩和考试的激励，我发现自己缺乏动力和纪律。没有人告诉我如何安排我的时间，我发现自己在浪费时间[......]我从来没有学会为了完成好工作或热爱学习而激励自己[......]我对数学的热爱在学校里慢慢死去[......]。我的日程安排非常繁忙--学校、音乐课、舞蹈、体育、教堂和学生领导--这意味着我经常从早上 7 点跑到晚上 9 点半，之后我还要做作业，经常过了午夜[......]我没有时间去发现自己的激情和天职[......]我还记得每当我因为感冒而不得不取消一节课或一门课时，我会感到无比的轻松。哦，有一两个小时没有安排的时间，阅读、思考或只是做人，是多么的甜蜜。
+>
 
-## 我自己的直线A连胜
+希瑟说她只擅长做学生。我想补充的是，她也是一个伟大的作家。她的故事很有说服力。在[这里](http://alternativestoschool.com/2016/04/25/confessions-teachers-pet/)阅读它。
 
-我在22年的求学生涯中，有三次短暂的好学生。我的第一次连读等了7年，第二次连读又等了7年。大多数孩子一直在等待，他们没有得到这种难得的 "回报"。
-对照这一章来的警告，我相信这些时期对我的自我发展都是无害的。我解释这种无害的原因是，"好成绩成瘾 "只是推动我的表现的一个次要因素。真正对知识的兴趣占了上风。在最后的连轴转中，我真正做的正是自己喜欢的事情。这就是大多数孩子从未体验过的学校教育的最佳状态。最终，在与体制斗争多年后，我在体制内找到了幸福的归宿。不幸的是，这或许也可以解释为什么我在那么多年的时间里，对教育体制基本保持沉默。那段最终的美好经历已经抹去了之前的痛苦和磨难。我似乎忘记了，我是经过19年的努力才找到自己的幸运之地的! 我是靠着努力、自律、自主学习和纯粹的倔强走到那里的。这也是为什么我没有看到很多青少年似乎走上了类似幸福的解决之道。
+## 我自己的全优连胜
 
-以下是那三个好的学习时期。
+我在 22 年的学校生涯中，当过三次短暂的好学生。我的第一次连胜等了 7 年，第二次连胜又等了 7 年。大多数孩子一直在等待，他们没有得到这种难得的"回报"。
 
-### 化学连胜期(1975年4月至1976年5月)
+对照这一章来的警告，我相信这些时期对我的自我发展都是无害的。我解释这种无害的原因是，"好成绩成瘾"只是推动我的表现的一个次要因素。真正对知识的兴趣占了上风。在最后的连轴转中，我真正做的正是自己喜欢的事情。这就是大多数孩子从未体验过的学校教育的最佳状态。最终，在与体制斗争多年后，我在体制内找到了幸福的归宿。不幸的是，这或许也可以解释为什么我在那么多年的时间里，对教育体制基本保持沉默。那段最终的美好经历已经抹去了之前的痛苦和磨难。我似乎忘记了，我是经过 19 年的努力才找到自己的幸运之地的！我是靠着努力、自律、[自主学习](https://supermemo.guru/wiki/Self-directed_learning)和纯粹的倔强走到那里的。这也是为什么我没有看到很多青少年似乎走上了类似幸福的解决之道。
 
-我在1975年被波兹南第72号学校开除，因为行为不端。没有任何手续跟着我到了新学校。多亏了这次幸运的机会，我在新的30号学校里立刻被改成了好学生。当好学生是会上瘾的。我喜欢这种赞美，这与几周前我在另一所学校面临的弃儿身份形成了鲜明的对比。当所有的孩子都为漫长的学年而疲惫不堪，梦想着暑假的时候，我却感到新奇和新鲜。13岁那年，是我有史以来第一次真正意义上在学校里学习的日子! 难怪我轻而易举地脱颖而出，成为一个渴望学习的学生! 那种GPA的瘾头在我身上无法持久。奖励不足以让我在功课上投入额外的时间。我有太多的其他兴趣（动物饲养、生物、拳击、体育等）。然而，我的化学老师Mrs Kaczmarek完美地击中了我的最佳推动区，促使我在化学竞赛中获胜，从而取得了好几个月的好成绩。这种良好的GPA连贯性随着小学的结束而结束。我试图在高中复制，但这个想法在新学校很快就被我从脑子里敲掉了。在高中，我们必须更早起床，学习负担更重，标准更严格，而我也没有白发少年的身份，让生活变得轻松。而且，我对当班级小丑的兴趣远远大于对学习的兴趣。得到新同学的认可似乎比得到新老师的认可更重要，因为他们都显得很遥远，不感兴趣。
+以下是那三个好的学习时期：
 
-我的化学GPA连胜的最大好处是，我把对动物的兴趣和对化学的兴趣结合起来，对生物化学产生了热情，这种热情持续了整个高中，实际上一直持续到现在。
+### 化学连胜(1975 年 4 月至 1976 年 5 月)
 
-### 人类生物学连载(1983年1月至1984年5月)
+我在 1975 年被波兹南第 72 号学校开除，因为[行为不端](https://supermemo.guru/wiki/Socialization:_Personal_stories)。没有任何手续跟着我到了新学校。多亏了这次幸运的机会，我在新的 30 号学校里立刻被改成了好学生。当好学生是会上瘾的。我喜欢这种赞美，这与几周前我在另一所学校面临的弃儿身份形成了鲜明的对比。当所有的孩子都为漫长的学年而疲惫不堪，梦想着暑假的时候，我却感到新奇和新鲜。13 岁那年，是我**有史以来第一次真正意义上在学校里学习的日子！** 难怪我轻而易举地脱颖而出，成为一个渴望学习的学生！ 那种 GPA 的瘾头在我身上无法持久。奖励不足以让我在功课上投入额外的时间。我有太多的其他兴趣（动物饲养、生物、拳击、体育等）。然而，我的化学老师 Mrs Kaczmarek 完美地击中了我的最佳[推动区](https://supermemo.guru/wiki/Push_zone)，促使我在[化学竞赛](https://supermemo.guru/wiki/Great_teachers_change_the_world)中获胜，从而取得了好几个月的好成绩。这种良好的 GPA 连贯性随着小学的结束而结束。我试图在高中复制，但这个想法在新学校很快就被我从脑子里敲掉了。在高中，我们必须更早起床，学习负担更重，标准更严格，而我也没有白发少年的身份，让生活变得轻松。而且，我对当班级小丑的兴趣远远大于对学习的兴趣。得到[新同学](https://supermemo.guru/wiki/Social_groups_in_socialization#Peer_dependence)的认可似乎比得到新老师的认可更重要，因为他们都显得很遥远，不感兴趣。
 
-1983年1月，21岁的我在大学课程中得到了短暂的休息，然后迎来了三次考试：生物化学、微生物学和生理学。我有史以来第一次要参加我真正感兴趣的科目的考试。在没有太多计划的情况下，仿佛是下意识地，我决定要在这些考试中取得好成绩。我开始投入8-9个小时的学习时间，以取得好成绩。我采用了我的主动学习技巧，后来发展到了渐进式学习。在那三次考试中，我成功地取得了满分，给教授们留下了深刻的印象，这是我求学生涯中最快乐的日子之一。这一时期标志着我真正开始了终身不懈的学习。我开始认真对待学业。在那之前，我喜欢学习，但我不喜欢为学校而学习。遗憾的是，这种对学习的热爱并没有转化为直达A的成绩。我有很多无聊的考试。而且，我决定继续学习，又报了一个五年制的计算机科学专业。这意味着，在1984年，我已经不得不把重点放在数学和物理上，以通过入学考试。在这期间，我又是一个差生。我在我喜欢/需要的考试中取得了很好的成绩，而在其他地方却取得了糟糕的成绩。
+我的化学 GPA 连胜的最大好处是，我把对动物的兴趣和对化学的兴趣结合起来，对生物化学产生了热情，这种热情持续了整个高中，实际上一直持续到现在。
 
-生物学GPA的连胜带来的最大好处是巩固了我对科学，尤其是医学科学的终生兴趣。从此我再也没有停止过学习。
+### 人类生物学连胜(1983 年 1 月至 1984 年 5 月)
 
-### SuperMemo连载（1987-1990年）。
-当我终于摆脱了兵役的威胁时，退学是一个考虑。但是，在没有军方威胁的情况下，在开明的上司的帮助下，我得以在剩下的四年学习中协商新的课程。突然间，我有生以来第一次能够只学习我认为值得学习的东西。这让我的热忱翻了两番。就这样，我发明了一套完美的大学学习体系。我改学英语，不再听课，用相互认可的课本，用英语通过了所有的考试，总的来说，我对学习充满了乐趣。突然间，我的学校，从一个令人厌烦的压迫者变成了一个充满聪明的高度激励的盟友。在SuperMemo的帮助下，我很快就掌握了各个科目的基础知识。最重要的是，在那个时期的最后，我专注于SuperMemo理论本身。最终，我写出了我的硕士论文，那是一种纯粹的乐趣和快乐。那段可爱的时期可能会一直持续下去。然而，我毕业了，我最后的好学之风自然而然地结束了。
+ 1983 年 1 月，21 岁的我在大学课程中得到了短暂的休息，然后迎来了三次考试：生物化学、微生物学和生理学。我[有史以来第一次要参加我真正感兴趣的科目的考试](https://supermemo.guru/wiki/Serendipitous_impact_of_mindless_cramming)。在没有太多计划的情况下，仿佛是下意识地，我决定要在这些考试中取得好成绩。我开始投入 8 - 9 个小时的学习时间，以取得好成绩。我采用了我的主动学习技巧，后来发展到了渐进学习。在那三次考试中，我成功地取得了满分，给教授们留下了深刻的印象，这是我求学生涯中最快乐的日子之一。这一时期标志着我真正开始了终身不懈的学习。我开始认真对待学业。在那之前，我喜欢学习，但我不喜欢为学校而学习。遗憾的是，这种对学习的热爱并没有转化为全优的成绩。我有很多无聊的考试。而且，我决定继续学习，又报了一个五年制的计算机科学专业。这意味着，在 1984 年，我已经不得不把重点放在数学和物理上，以通过入学考试。在这期间，我又是一个差生。我在我喜欢/需要的考试中取得了很好的成绩，而在其他地方却取得了糟糕的成绩。
 
-我的SuperMemo连载带来的最大收获是SuperMemo本身。这为我未来30年（希望是更多）的生活确定了幸福的方向。
+生物学 GPA 的连胜带来的最大好处是巩固了我对科学，尤其是医学科学的终生兴趣。从此我再也没有停止过学习。
 
-在这个健康的过程中，早期有一个小小的GPA上瘾的威胁。与SuperMemo World的一位联合创始人Krzysztof Biedalak一起，我们进行了一场最佳学习成绩的竞赛。在一次数学考试中，他得了满分，我得了第二名。好斗的性格让我回去找老师坚持。"我们在和比达拉克打架" "We are in a fight with Biedalak. 我一定要考满分。请给我复试"。老师同意了。我的分数提高了。有可能，老师把分数提高了，只是为了赶走这个烦人的学生。克日什托夫不喜欢那个老师的小态度。幸运的是，这个插曲没有影响我们的友谊，我的GPA瘾也没有发作。如果我沉醉于好成绩，在那段学习好的时间里忙于补习，SuperMemo就不会诞生，我的整个人生就会走上另一条轨道。我的直觉告诉我，这将是一条高度劣质的轨道。
+### SuperMemo 连胜（1987 - 1990 年）
 
-总结起来，我所有的好学习连载都有3个共同点：（1）学习感兴趣的东西，（2）依靠自学，（3）好的、宽容的、令人印象深刻的老师。
+当我终于摆脱了兵役的威胁时，退学是一个[考虑](https://supermemo.guru/wiki/School_dropouts#Why_did_I_not_drop_out.3F)。但是，在没有军方威胁的情况下，在开明的上司的帮助下，我得以在剩下的四年学习中协商新的课程。突然间，我有生以来第一次能够只学习我认为值得学习的东西。这让我的热忱翻了两番。[就这样，我发明了一套完美的大学学习体系](https://supermemo.guru/wiki/How_I_invented_perfect_schooling)。我改学英语，不再听课，用公认的教科书通过了所有的英语考试，总的来说，我[对学习充满了乐趣](https://supermemo.guru/wiki/Pleasure_of_learning)。突然间，我的学校，从一个令人厌烦的压迫者变成了一个充满聪明的高度激励的盟友。在 SuperMemo 的帮助下，我很快就掌握了各个科目的基础知识。最重要的是，在那个时期的最后，我专注于 SuperMemo 理论本身。最终，我写出了[我的硕士论文](http://www.super-memory.com/english/ol.htm)，那是一种纯粹的乐趣和快乐。那段可爱的时期可能会一直持续下去。然而，我毕业了，我最后的好学之风自然而然地结束了。
 
-## 生产力的微观规则
-微规则是一套培养自律而不要求勇气的行为规则。微规则可以说 "从今天起，我将花不少于4分钟的时间学习英语"，或者 "从今天起，我将把每天的吸烟量从20支减少到19支"。
+我的 SuperMemo 连载带来的最大收获是 SuperMemo 本身。这为我未来 30 年（希望是更多）的生活确定了幸福的方向。
 
-微规则的威力来自于它可以不痛不痒地引入，并逐渐调理心智，使其爱护调理对象。微规则可能是通往高生产力的最有效途径。一个自由的个体就是这样从基于自律的生产力过渡到基于生产乐趣的生产力。
+在这个健康的过程中，早期有一个小小的 GPA 上瘾的威胁。与 SuperMemo World 的一位联合创始人 [Krzysztof Biedalak](https://supermemo.guru/wiki/Krzysztof_Biedalak) 一起，我们进行了一场最佳学习成绩的竞赛。在一次数学考试中，他得了满分，我得了第二名。好斗的性格让我回去找老师坚持。"我们在和比达拉克比试，我一定要考满分。请给我复试"。老师同意了。我的分数提高了。有可能，老师把分数提高了，只是为了赶走这个烦人的学生。克日什托夫不喜欢那个老师的小态度。幸运的是，这个插曲没有影响我们的友谊，我的 GPA 瘾也没有发作。如果我沉醉于好成绩，在那段学习好的时间里忙于死记硬背， SuperMemo 就不会诞生，我的整个人生就会走上另一条轨道。我的直觉告诉我，这将是一条高度劣质的轨道。
 
-当一个受过良好教育的头脑采取完美主义的目标时，小障碍和累积的失败会导致显著的不快感（见：在学校学到的50个坏习惯）。一旦不快感进入对生产力的影响反馈回路，再好的计划也可能崩溃。新年决议的失败就是一个典型的例子。
+总结起来，**我所有的好学习连胜都有 3 个共同点：（1）学习[感兴趣的东西](https://supermemo.guru/wiki/Knowledge_valuation_network)，（2）依靠[自学](https://supermemo.guru/wiki/Self-learning)，（3）好的、宽容的、令人印象深刻的老师**
 
-相反，微观规则可能会在生产力的愉悦和生产力本身之间产生正向反馈环。例如，一点点的学习会增加学习的乐趣，而学习的乐趣又可能呼唤更多的学习。这个反馈环最终会因为疲劳或利益或义务的竞争而被关闭。在一个健康的个体中，从长远来看，以微规则发起的自由学习会以理论上最大的生产力填满所有分配的时间。
+## 生产力的微规则
 
-年轻时，我尝试过很多 "个人改革 "和提高生产力的方法。最终，微规则服务于个人的改造，下面我的故事就来解释一下。
+**微规则**是一套培养自律而不要求**毅力**的行为规则。微规则可以说"从今天起，我将花不少于 4 分钟的时间学习英语"，或者"从今天起，我将把每天的吸烟量从 20 支减少到 19 支"。
 
-个人轶事. 为什么要用轶事？
-长年的学校教育并没有摧毁我的自律性和自我激励的能力。我把这归功于在生产力微规则的帮助下，缓慢地逐步恢复。就我自己而言，生产力微规则可能是 "工作时绝不偷看邮件"、"工作时绝不超过最佳睡眠时间"、"每天锻炼 "等。其实我的微规则集的制定可以追溯到1983年8月31日。那时我正处于21岁的高龄，对于个人改革来说，已经很晚了。我称我的大脑就是迟迟没有成熟。中年改革总比不改革好! 1983年8月31日是我决定不懈进步的日子，我从未停止过对规则的改进。我从 "每天10分钟英语"、"每天看2页生化书 "这样的规则开始，从小做起。一旦我的微规则集被证明是可持续的、令人愉悦的，我就会增加一点额外的努力（例如从每天10分钟提高到15分钟）。仅仅100天后，我就已经看到了强大的效果。这使我开始走上了一条不懈进步的道路，直到几年后，我可以说，我的整个日子都在高效地度过。这种渐进式的自我提升，导致了（1）工具：SuperMemo中的计划和（2）增量阅读。计划决定我做什么，增量学习决定我怎么做。这几天，我用SleepChart加强了这两个功能，它还帮我优化了睡眠的时间、工作的时间和运动的时间。我大胆猜测，从简单的小步子到达到我生产力潜力的80-90%，大约花了6-8年的时间。当增加更多的自律性可能对健康不利时，就达到了这个最大的生产力潜力。这意味着，我花了大约26-30年的大脑开发时间，才成为一个完全有生产力的人。今天，生产力是本能的，是伴随着快乐而来的。没有任何挣扎。我在本书的其他地方证明，我也曾被学校教育所损害。我确信，如果我在整个青年时期采用自由学习的方式，我可以更早地达到我的发展和生产力基准值
+**微规则**的威力来自于它可以不痛不痒地引入，并逐渐调理心智，使其爱护调理对象。**微规则**可能是通往高生产力的最有效途径。一个自由的个体就是这样从基于[自律](https://supermemo.guru/wiki/Self-discipline)的生产力过渡到基于生产乐趣的生产力。
+
+当一个受过良好教育的头脑采取完美主义的目标时，小障碍和累积的失败会导致显著的不快感（见：[在学校学到的 100 个坏习惯](https://supermemo.guru/wiki/100_bad_habits_learned_at_school)）。一旦不快感进入对生产力的影响反馈回路，再好的计划也可能崩溃。新年决议的失败就是一个典型的例子。我在 [SuperMemo Guru](https://supermemo.guru/wiki/SuperMemo_Guru) 的文章描绘了一幅关于快乐的[自由学习](https://supermemo.guru/wiki/Free_learning)、[创造力](https://supermemo.guru/wiki/Creativity)和[良好睡眠](https://supermemo.guru/wiki/Science_of_sleep)的理想图景。然而，如果所有的理想都是在截止日期前实现的，它们可能会导致相反的结果：压力、糟糕的睡眠和混乱。**罗马不是一天建成的。**
+
+**微规则**可能会在生产力的乐趣和生产力本身之间产生一个积极的反馈循环。例如，一点点的学习会增加学习的乐趣，而[学习的乐趣](https://supermemo.guru/wiki/Pleasure_of_learning)又可能呼唤更多的学习。这个反馈环最终会因为疲劳或利益或义务的竞争而被关闭。在一个健康的个体中，从长远来看，以**微规则**发起的[自由学习](https://supermemo.guru/wiki/Free_learning)会以理论上最大的生产力填满所有分配的时间。
+
+年轻时，我尝试过很多"个人改革"和提高生产力的方法。最终，**微规则**服务于个人的改造，下面我的故事就来解释一下。
+
+个人轶事
+
+长年的学校教育并没有摧毁我的自律性和自我激励的能力。我把这归功于在生产力**微规则**的帮助下，缓慢地逐步恢复。就我自己而言，生产力微规则可能是"工作时绝不偷看邮件"、"工作时绝不超过最佳睡眠时间"、"每天锻炼"等。其实我的微规则集的制定可以追溯到 1983 年 8 月 31 日。那时我正处于 21 岁的高龄，对于个人改革来说，已经很晚了。我称我的大脑就是迟迟没有成熟。中年改革总比不改革好！ 1983 年 8 月 31 日是我决定不懈进步的日子，我从未停止过对规则的改进。我从"每天 10 分钟英语"、"每天看 2 页生化书"这样的规则开始，从小做起。一旦我的微规则集被证明是可持续的、令人愉悦的，我就会增加一点额外的努力（例如从每天 10 分钟提高到 15 分钟）。仅仅 100 天后，我就已经看到了强大的效果。这使我开始走上了一条不懈进步的道路，直到几年后，我可以说，我的整个日子都在高效地度过。这种渐进的自我提升，导致了 SuperMemo 中的（1）工具： 计划和（2）渐进阅读。计划决定我做什么，渐进学习决定我怎么做。这几天，我用 SleepChart 加强了这两个功能，它还帮我优化了睡眠的时间、工作的时间和运动的时间。我大胆猜测，从简单的小步子到达到我生产力潜力的 80 - 90 %，大约花了 6 - 8 年的时间。当增加更多的自律性可能对健康不利时，就达到了这个最大的生产力潜力。这意味着，我花了大约 26 - 30 年的大脑开发时间，才成为一个完全有生产力的人。今天，生产力是本能的，是伴随着快乐而来的。没有任何挣扎。我在本书的其他地方证明，我也曾被学校教育所损害。我确信，如果我在整个青年时期采用自由学习的方式，我可以更早地达到我的发展和生产力基准值
 
 ## 进一步阅读
 
-凯文-克鲁斯所著的《我的孩子是直博生，而他们什么都不懂》中，将直博生的后宫现实描绘得淋漓尽致。
+- 《[案例研究：天才或阿斯伯格](https://supermemo.guru/wiki/Case_study:_Genius_or_Asperger)》描述了成为一名完美学生的苦难
+- 凯文·克鲁斯的《[我的孩子们都是优等学生，但他们却一无所知](https://supermemo.guru/wiki/Kevin_Kruse:_School_serves_mindless_cramming)》完美地描述了成为优等学生的幕后现实
