--- a/Essays/我们如何才能开发出变革性的思想工具？.md
+++ b/Essays/我们如何才能开发出变革性的思想工具？.md
@@ -48,7 +48,7 @@ The musician and comedian Martin Mull has observed that “writing about music i
 
 Few subjects are more widely regarded as difficult than quantum computing and quantum mechanics. Indeed, popular media accounts often regale (and intimidate) readers with quotes from famous physicists in the vein of: “anyone who thinks they’ve understood quantum mechanics has not understood quantum mechanics”.
 
-没有什么学科比量子计算和量子力学更被广泛认为是困难的。事实上，流行的媒体报道经常用著名物理学家的名言来安慰(和恐吓)读者，这些名言包括 "任何认为自己已经理解了量子力学的人都没有理解量子力学"。
+量子力学和量子计算普遍被认为是最艰涩的学科。事实上，主流媒体也常用引用著名物理学家的名言诸如“任何认为自己已经理解了量子力学的人都没有理解量子力学”来去安慰（和恐吓）读者。
 
 What makes these subjects difficult? In fact, individually many of the underlying ideas are not too complicated for people with a technical background. But the ideas come in an overwhelming number, a tsunami of unfamiliar concepts and notation. People must learn in rapid succession of qubits, the bra-ket notation, Hadamard gates, controlled-not gates, and many, many other abstract, unfamiliar notions. They’re imbibing an entire new language. Even if they can follow at first, understanding later ideas requires fluency with all the earlier ideas. It’s overwhelming and eventually disheartening.
 
