--- a/Essays/我们如何才能开发出变革性的思想工具？.md
+++ b/Essays/我们如何才能开发出变革性的思想工具？.md
@@ -6,13 +6,13 @@ October 2019
 
 2019年10月
 
-Part of the origin myth of modern computing is the story of a golden age in the 1960s and 1970s. In this story, visionary pioneers pursued a dream in which computers enabled powerful tools for thought, that is, tools to augment human intelligenceE.g., Douglas Engelbart, [Augmenting Human Intellect: A Conceptual Framework](https://numinous.productions/ttft/assets/Engelbart1962.pdf) (1962).. One of those pioneers, Alan Kay, summed up the optimism of this dream when he wrote of the potential of the personal computer: “the very use of it would actually change the thought patterns of an entire civilization”Alan Kay, [User Interface: A Personal View](https://numinous.productions/ttft/assets/Kay1989.pdf) (1989)..
+Part of the origin myth of modern computing is the story of a golden age in the 1960s and 1970s. In this story, visionary pioneers pursued a dream in which computers enabled powerful tools for thought, that is, tools to augment human intelligence. E.g., Douglas Engelbart, [Augmenting Human Intellect: A Conceptual Framework](https://numinous.productions/ttft/assets/Engelbart1962.pdf) (1962).. One of those pioneers, Alan Kay, summed up the optimism of this dream when he wrote of the potential of the personal computer: “the very use of it would actually change the thought patterns of an entire civilization”Alan Kay, [User Interface: A Personal View](https://numinous.productions/ttft/assets/Kay1989.pdf) (1989)..
 
-现代计算的部分起源神话是关于1960年代和1970年代的黄金时代的故事。在这个故事中，有远见的先驱们追求一个梦想，即计算机能够成为强大的思想工具，也就是增强人类智力的工具。例如，道格拉斯-恩格尔巴特，[增强人类智力：一个概念框架](https://numinous.productions/ttft/assets/Engelbart1962.pdf) (1962)。这些先驱者之一，艾伦-凯，在写到个人电脑的潜力时，总结了这个梦想的乐观精神。"它的使用实际上将改变整个文明的思维模式 "艾伦-凯，[用户界面：个人观点](https://numinous.productions/ttft/assets/Kay1989.pdf) (1989)。
+追溯现代计算机起源时，人们常常愿意讲述上世纪60年代和70年代的故事，那是一段黄金般的年代。故事中，远见卓识的先驱们追求一个梦想，即计算机能够成为强大的思想工具，也就是增强人类智力的工具。比如道格拉斯-恩格尔巴特写过[增强人类智力：一个概念框架](https://numinous.productions/ttft/assets/Engelbart1962.pdf) (1962)。艾伦-凯是这些先驱者之一，他在写到个人电脑的潜力时，总结了这个梦想的乐观精神。"它（计算机）的应用将改变整个人类文明的思维模式 "艾伦-凯，[用户界面：个人观点](https://numinous.productions/ttft/assets/Kay1989.pdf) (1989)。
 
 It’s an inspiring dream, which helped lead to modern interactive graphics, windowing interfaces, word processors, and much else. But retrospectively it’s difficult not to be disappointed, to feel that computers have not yet been nearly as transformative as far older tools for thought, such as language and writing. Today, it’s common in technology circles to pay lip service to the pioneering dreams of the past. But nostalgia aside there is little determined effort to pursue the vision of transformative new tools for thought.
 
-这是一个振奋人心的梦想，它帮助促成了现代交互式图形、窗口界面、文字处理器和其他许多东西。但回过头来看，我们很难不感到失望，觉得计算机还没有像更早的思想工具(如语言和写作)那样产生变革。今天，在技术界，对过去的先锋梦想进行口头宣传是很常见的。但除了怀旧之外，几乎没有什么坚定的努力来追求变革性的新思想工具的愿景。
+这个鼓舞人心的梦想促成了现代交互式图形界面、窗口式界面、文字处理器等很多发明。但回过头来看，我们很难不感到失望，因为比起更早的思维工具，比如语言和写作，计算机并不够有变革性。今天，在技术界，对过去的先锋梦想进行口头宣传是很常见的。但除了怀旧之外，几乎没有什么坚定的努力来追求变革性的新思想工具的愿景。
 
 We believe now is a good time to work hard on this vision again. In this essay we sketch out a set of ideas we believe can be used to help develop transformative new tools for thought. In the first part of the essay we describe an experimental prototype system that we’ve built, a kind of *mnemonic medium* intended to augment human memory. This is a snapshot of an ongoing project, detailing both encouraging progress as well as many challenges and opportunities. In the second part of the essay, we broaden the focus. We sketch several other prototype systems. And we address the question: why is it that the technology industry has made comparatively little effort developing this vision of transformative tools for thought?
 
